[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-util"
version = "0.0.1"
authors = [
    {name = "Philip G. Brodrick", email = "philip.g.brodrick@jpl.nasa.gov"},
]
description = "Imaging Spectrometer Utilities"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click",
    "netCDF4<1.7.1",
    "numpy>=1.20,<2.0.0",
    "gdal>=3.0.0",
    "spectral>=0.19",
]

[project.urls]
Homepage = "http://github.com/emit-sds/SpectralUtil"

[project.optional-dependencies]
test = ["pytest>=3.5.1"]

[project.scripts]
spectral_util = "spectral_util.__main__:cli"

[tool.setuptools]
packages = ["spectral_util"]
include-package-data = true