[metadata]
name = spectral-util
author = Philip G. Brodrick
author_email = philip.g.brodrick@jpl.nasa.gov
url = http://github.com/emit-sds/SpectralUtil
description = Imaging Spectrometer Utilities
long_description = file: README.md
long_description_content_type = text/markdown

license = BSD 3-Clause License
classifiers =
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = True
install_requires =
  click
  netCDF4 < 1.7.1
  numpy >= 1.20, < 2.0.0
  gdal >= 3.0.0
  spectral >= 0.19
  scipy

[options.entry_points]
console_scripts =
  spectral_util = spectral_util.__main__:cli

[options.extras_require]
test =
  pytest >= 3.5.1